Update BlogController and added API return

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,9 +43,9 @@ security:
                 always_remember_me: true
 
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/admin/, role: ROLE_ADMIN, requires_channel: https }
         - { path: ^/custom/, role: ROLE_ADMIN }
         - { path: ^/wiki/, role: ROLE_BETAREADER }
