--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "ubuntu/maytok",
     "license": "proprietary",
     "type": "project",
+    "description": "Web for maytok project",
     "autoload": {
         "psr-4": {
             "": "src/"
