--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "grunt-exec": "^0.4.6",
     "grunt-lesslint": "^1.1.3",
     "grunt-minjson": "^0.3.0",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "imagemin-mozjpeg": "^5.1.0"
   },
   "directories": {
