--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ matrix:
     fast_finish: true
     allow_failures:
         - php: '7.0'
+
+before_script:
+    - composer self-update
+    - composer install --prefer-source --dev
+
+# Customize when the notification emails are sent.
+notifications:
+    on_success: never
+    on_failure: always
