--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,15 @@ matrix:
     allow_failures:
         - php: '7.0'
 
+services:
+    - mysql
+
 before_script:
+    - mysql -e "create database IF NOT EXISTS symfony" -uroot;
     - composer self-update
-    - composer install --prefer-source --dev
+    - composer install --dev
+
+script: phpunit --configuration phpunit.xml.dist
 
 # Customize when the notification emails are sent.
 notifications:
